--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Popular Movies</string>
+    <string name="rating">Rating</string>
+    <string name="release_date">Release Date</string>
+    <string name="plot">Plot</string>
+    <string name="sort_by">Sort By</string>
+    <string name="popular">Popular</string>
 </resources>
